frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
            - name: nginx-volume
              mountPath: /etc/nginx
      volumes:
        - name: html-volume
          hostPath:
            path: /opt/jp-shopping-site/frontend/html
        - name: nginx-volume
          hostPath:
            path: /opt/jp-shopping-site/frontend/nginx
